# trading-skills

./: .gitignore  CLAUDE.md  README.md  conftest.py
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/tushare-cli-patterns/: SKILL.md
docs/plans/: 2026-03-03-tushare-cli-design.md  2026-03-03-tushare-cli-impl.md
skills/tushare-alpha/: SKILL.md
skills/tushare-concepts/: SKILL.md
skills/tushare-financial/: SKILL.md
skills/tushare-forex/: SKILL.md
skills/tushare-futures/: SKILL.md
skills/tushare-index/: SKILL.md
skills/tushare-query/: SKILL.md
skills/tushare-stock/: SKILL.md
tests/tushare_cli/: test_cache.py  test_commands_futures.py  test_commands_index.py  test_commands_remaining.py  test_commands_stock.py  test_config.py  test_main.py  test_output.py
tools/tushare_cli/: README.md  pyproject.toml  requirements.txt
tools/tushare_cli/src/tushare_cli/: api.py  cache.py  config.py  main.py  output.py
tools/tushare_cli/src/tushare_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tools/tushare_cli/src/tushare_cli/commands/: alpha.py  concepts.py  financial.py  forex.py  futures.py  index.py  stock.py
